RelativeRecordSet.tryUpdateAndCheckpoint: 1. 锁问题p1，我把allCheckpointWhenCommit优化去掉； 2. oldTable-setDirty: if (ar.dirty || record.getDirty()) 3. 其他次要更新。